      to keep compat with ViSP 2.10.0
    . New vpFlyCaptureGrabber class to capture images from PointGrey
      cameras (USB-3, firewire, GigE)
    . New vpVirtuose class, a wrapper over Haption Virtuose SDK that is
      provided with their haptic devices
    . New vpComedi and vpForceTorqueAtiSensor classes to get synchonous
      data from ATI F/T sensors
    . New cross platform multi-threading capabilities with vpMutex and
      vpThread classes
  - Tutorials
    . New tutorial: How to use multi-threading capabilities
  - Bug fixed
    . [#37] How to build for ios? build failed
    . [#38] Wrong urls in visp/doc/tutorial-calibration.doc
    . [#39] Meta header files visp_<module>.h not installed
    . [#40] vpKeyPoint fails to R/W database on big endian arch
    . [#42] Fails to build on Fedora 23 with Coin3-devel
    . [#44] Reshape issue with vpRowVector or vpColVector
    . [#47] Build issue in vpMath.h around vpMath::sign()
    . [#48] Fix vpPoseVector::getThetaUVector() to return the adequate vector
    . [#54] Error in vpHomography::projection()
    . [#59] Unable to use visp-config or visp-config.bat to build a project
            without CMake

----------------------------------------------
ViSP 3.0.0 (released December 18th, 2015)
  - New features
    . Compatibility with Windows 8.1 and 10
    . Compatibility with Microsoft Visual C++ 2015 (MSCV 14)
    . Compatibility with Odroid XU4
    . Source code migrates to GitHub: http://github.org/lagadic/visp
    . Introduce Travis continuous integration
    . New website: http://visp.inria.fr
    . Reorganize source in modules (core, vision, mbt, tt, …) with a library
      per module named libvisp_<module>. Keep compat with previous releases.
    . Allow to link contributions to ViSP source code using
      VISP_CONTRIB_MODULES_PATH CMake var;
      see http://github.org/lagadic/visp_contrib
    . Model-based tracker:
      + New visibility tests based on the scanline rendering algorithm.