@@ -198,6 +198,7 @@ set(VISP_HAVE_LIBFREENECT    "@VISP_HAVE_LIBFREENECT@")
 set(VISP_HAVE_LIBFREENECT_AND_DEPENDENCIES "@VISP_HAVE_LIBFREENECT_AND_DEPENDENCIES@")
 set(VISP_HAVE_LIBFREENECT_OLD "@VISP_HAVE_LIBFREENECT_OLD@")
 set(VISP_HAVE_LIBUSB_1       "@VISP_HAVE_LIBUSB_1@")
+set(VISP_HAVE_REALSENSE      "@VISP_HAVE_REALSENSE@")
 set(VISP_HAVE_OPENCV         "@VISP_HAVE_OPENCV@")
 set(VISP_HAVE_OPENCV_NONFREE "@VISP_HAVE_OPENCV_NONFREE@")
 set(VISP_HAVE_OPENCV_VERSION "@VISP_HAVE_OPENCV_VERSION@")
